Implementado xml página Bienvenida

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Holdy</string>
+    <string name="default_web_client_id">153800226619-ioq3neu86pv1cs4qtbie6mr6ii1gk40.apps.googleusercontent.com</string>
 </resources>
