--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="registrate_ul">
         <u>regístrate</u>
     </string>
+     <string name="login_normal">login</string>
+    <string name="registrarte">C O N T I N U A R</string>
 </resources>
